--- a/overview.qmd
+++ b/overview.qmd
@@ -1,6 +1,6 @@
 # Schedule Overview
 
-The following Gantt chart shows the four work packages (WP0: Coordination and Planning, WP1: Make Data Processing Framework Inclusive, WP2: Publication and WP3: Facilitate Usage and Applications) and the timeframe in which activities will be carried out. See Sections 2.1 - 2.4 above for details on the goals and implementation of the WPs. The chart also includes the project activities and giving an overview of which activities are lead by which collaborator, where PI = Principal Investigator, RSE = Research Software Engineer, and SA = Scientific Assisstant, PA = Programming Assistant, ZD = KOF Swiss Economic Institute (KOF) IT specialist ('Zentrale Dienste').
+The following Gantt chart shows the four work packages (WP0: Coordination and Planning, WP1: Make Data Processing Framework Inclusive, WP2: Publication and WP3: Facilitate Usage and Applications) and the timeframe in which activities will be carried out. See Sections 2.1 - 2.4 above for details on the goals and implementation of the WPs. The chart also includes the project activities and giving an overview of which activity is led by which collaborator, where PI = Principal Investigator, RSE = Research Software Engineer, and SA = Scientific Assisstant, PA = Programming Assistant, ZD = KOF Swiss Economic Institute (KOF) IT specialist ('Zentrale Dienste').
 
 ![Schedule overview](gantt_chart.png)
 
